# parser

./: .gitignore  CMakeLists.txt  Dockerfile  README.MD  rundocker.sh  sample.txt
include/: console_output_impl.hpp  output_factory.hpp  output_interface.hpp  text_output_impl.hpp  text_parser.hpp  xml_output_impl.hpp
parser/: CMakeLists.txt  main.cpp
parser/include/: console_output_impl.hpp  text_output_impl.hpp  xml_output_impl.hpp
parser/src/: CMakeLists.txt  text_output_impl.cpp
parser/test/: CMakeLists.txt  test_output_factory.cpp  test_output_factory.hpp
src/: console_output_impl.cpp  output_factory.cpp  text_output_impl.cpp  text_parser.cpp  xml_output_impl.cpp
test/: CMakeLists.txt  test_text_parser.cpp  test_text_parser.hpp
